--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prisma:dev:deploy": "npx migrate deploy",
+    "db:dev:rm": "docker-compose rm -s -f -v",
+    "db:dev:up": "docker-compose up -d",
+    "db:dev:restart": "npm db:dev:rm && npm db:dev:up && sleep 1 && prisma:dev:deploy",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -23,7 +27,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "@prisma/client": "^4.8.1",
+    "@prisma/client": "^4.9.0",
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -45,7 +49,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
-    "prisma": "^4.8.1",
+    "prisma": "^4.9.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
